<resources>
    <string name="app_name">MovieRater</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
</resources>
