<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".SignUpPage">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/stars"
        android:autofillHints="Select an image"/>
    <EditText
            android:id="@+id/firstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_shape1"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/txtColor"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"/>
    <EditText
            android:id="@+id/lastName"
            android:layout_width="300dp"
            android:layout_height="50dp"
        android:background="@drawable/round_shape1"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/txtColor"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"/>
    <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="50dp"
        android:background="@drawable/round_shape1"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/txtColor"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
        android:background="@drawable/round_shape1"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/txtColor"
        android:inputType="textEmailAddress"/>
    <RadioGroup
            android:id="@+id/gender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <RadioButton
               android:id="@+id/maleG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:text="@string/male"
               android:textSize="25sp"
            android:textColor="@color/txtColor"/>
        <RadioButton
                android:id="@+id/femaleG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
                android:textSize="25sp"
            android:textColor="@color/txtColor"/>
    </RadioGroup>
    <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
        android:background="@drawable/round_shape1"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:textColorHint="@color/txtColor"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/re-enterPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_shape1"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/txtColor" />
    <Button
            android:onClick="registerUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/txtColor"
        android:background="@drawable/round_shape"
        android:text="@string/submit" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:onClick="goToLoginPage"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/round_shape1"
            android:textColor="@color/txtColor"
            android:text="@string/sign_in"/>

    </LinearLayout>

</LinearLayout>